adds navigation bar

--- a/scss/icons/_variables.scss
+++ b/scss/icons/_variables.scss
@@ -1,6 +1,8 @@
 $icomoon-font-family: "netmatters-icons" !default;
 $icomoon-font-path: "../font" !default;
 
+//TODO: although this is provided by icomoon, it can be improved by using a map
+
 $icon-bars: "\e900";
 $icon-code: "\e901";
 $icon-facebook: "\e902";
