add border to bottom of nav bar

--- a/scss/nav-bar/_nav-bar.scss
+++ b/scss/nav-bar/_nav-bar.scss
@@ -8,6 +8,7 @@ nav {
     }
     
     background-color: $nav-background;
+    border-bottom: 1px solid $nav-bottom-border;
 
     ul {
         display: flex;
