--- a/scss/nav-bar/_variables.scss
+++ b/scss/nav-bar/_variables.scss
@@ -2,6 +2,7 @@ $nav-text-colour: #fff;
 $nav-background: #333645;
 $nav-highlight: #484a58;
 $nav-shadow:  #262834;
+$nav-bottom-border: #999aa2;
 
 $nav-font-size: (18px / 16px) * 1rem;
 $nav-font-size-first-line: (10px / 16px) * 1rem;
