--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,10 @@
         "breakpoints",
         "service-colours",
         "./icons/font",
-        "./nav-bar/nav-bar";
+        "./nav-bar/nav-bar",
+        "./hero-image/hero-image";
 
 body {
     font-family: 'Poppins', 'sans-serif';
+    letter-spacing: 0.4px;
 }
