reuse shared variables

--- a/scss/nav-bar/_variables.scss
+++ b/scss/nav-bar/_variables.scss
@@ -1,5 +1,5 @@
 $nav-text-colour: #fff;
-$nav-background: #333645;
+$nav-background: $brand-background-colour;
 $nav-highlight: #484a58;
 $nav-shadow:  #262834;
 $nav-bottom-border: #999aa2;
