--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "../node_modules/normalize.css/normalize",
         "breakpoints",
-        "service-colours",
+        "button",
+        "shared-colours",
         "./icons/font",
         "./nav-bar/nav-bar",
         "./hero-image/hero-image";
