--- a/scss/hero-image/_hero-image.scss
+++ b/scss/hero-image/_hero-image.scss
@@ -42,22 +42,18 @@
     }
 
     a {
-        display: block;
+        @extend %button;
         background-color: $hero-button-colour;
 
         margin: 2em auto 0;
         width: 14.5ch;
         padding: 1em 1.8ch;
-        border-radius: 3px;
 
         @media (min-width: map.get($breakpoints, "small")) {
             margin-left: 0;
         }
 
         font-size: $hero-button-size;
-        text-align: center;
-        text-transform: uppercase;
-        text-decoration: none;
         color: $hero-text-colour;
     }
 
