add about section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,8 @@
         "shared-colours",
         "./icons/font",
         "./nav-bar/nav-bar",
-        "./hero-image/hero-image";
+        "./hero-image/hero-image",
+        "./about/about";
 
 body {
     font-family: 'Poppins', 'sans-serif';
