--- a/scss/about/_about.scss
+++ b/scss/about/_about.scss
@@ -50,15 +50,13 @@
     }
 
     a {
-        @extend %button;
-
-        background-color: $about-button-backgroud-colour;
-        color: $about-button-text-colour;
-        font-size: $about-button-size;
+        @include button(
+            $background-colour: $about-button-background-colour,
+            $text-colour: $about-button-text-colour,
+            $font-size: $about-button-size
+        );
 
         margin: 2em auto 0 0;
-        width: 14.5ch;
-        padding: 0.8em 1.4ch;
 
         @media (min-width: map.get($breakpoints, "small")) {
             margin-left: 0;
