add dimensions to button mixin

--- a/scss/about/_variables.scss
+++ b/scss/about/_variables.scss
@@ -6,3 +6,6 @@ $about-button-text-colour: $brand-background-colour;
 $about-heading-size: (36px / 16px) * 1rem;
 $about-para-size: (16px / 16px) * 1rem;
 $about-button-size: (16px / 16px) * 1rem;
+
+$about-button-width: 10.5rem;
+$about-button-height: 2.7rem;
