--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -1,4 +1,7 @@
-@mixin button($background-colour, $text-colour, $font-size) {
+@mixin button(
+        $background-colour, $text-colour, $font-size,
+        $width: 12rem, $height: 2.5rem
+    ) {
     display: block;
     border-radius: 3px;
 
@@ -11,6 +14,7 @@
     font-size: $font-size;
 
     margin: 2em auto;
-    width: 14.5ch;
-    padding: 0.8em 1.4ch;
+    width: $width;
+    padding-top: ($height - $font-size) * 0.5;
+    padding-bottom: ($height - $font-size) * 0.5;
 }
