--- a/scss/about/_about.scss
+++ b/scss/about/_about.scss
@@ -53,7 +53,9 @@
         @include button(
             $background-colour: $about-button-background-colour,
             $text-colour: $about-button-text-colour,
-            $font-size: $about-button-size
+            $font-size: $about-button-size,
+            $width: $about-button-width,
+            $height: $about-button-height
         );
 
         margin: 2em auto 0 0;
