--- a/scss/hero-image/_variables.scss
+++ b/scss/hero-image/_variables.scss
@@ -10,6 +10,9 @@ $hero-heading-size: (48px / 16px) * 1rem;
 $hero-para-size: (20px / 16px) * 1rem;
 $hero-button-size: (20px / 16px) * 1rem;
 
+$hero-button-width: 14rem;
+$hero-button-height: 3.3rem;
+
 // when viewport width is larger than breakpoint, hero height should be:
 $hero-height-by-breakpoint: (
     'mobile': 531px,
