--- a/scss/icons/_font.scss
+++ b/scss/icons/_font.scss
@@ -1,90 +1,39 @@
 @import "variables";
 
 @font-face {
-  font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?choi8y');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?choi8y#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?choi8y') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?choi8y') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?choi8y##{$icomoon-font-family}') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+    font-family: '#{$icomoon-font-family}';
+    src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?choi8y');
+    src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?choi8y#iefix') format('embedded-opentype'),
+          url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?choi8y') format('truetype'),
+          url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?choi8y') format('woff'),
+          url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?choi8y##{$icomoon-font-family}') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+// define as placeholder so rules can be reused elsewhere if icons are used
+// in a way other than setting the class name to be the name of an icon.
+%icon {
+    font-family: '#{$icomoon-font-family}' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: '#{$icomoon-font-family}' !important;
-//   speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    @extend %icon;
 }
 
-.icon-bars {
-  &:before {
-    content: $icon-bars; 
-  }
+@each $icon-name, $unicode in $icon-unicode-by-name {
+    .#{$icon-name} {
+        &::before {
+            content: $unicode;
+        }
+    }
 }
-.icon-code {
-  &:before {
-    content: $icon-code; 
-  }
-}
-.icon-facebook {
-  &:before {
-    content: $icon-facebook; 
-  }
-}
-.icon-grid {
-  &:before {
-    content: $icon-grid; 
-  }
-}
-.icon-linked-in {
-  &:before {
-    content: $icon-linked-in; 
-  }
-}
-.icon-monitor {
-  &:before {
-    content: $icon-monitor; 
-  }
-}
-.icon-phone {
-  &:before {
-    content: $icon-phone; 
-  }
-}
-.icon-right-arrow {
-  &:before {
-    content: $icon-right-arrow; 
-  }
-}
-.icon-search {
-  &:before {
-    content: $icon-search; 
-  }
-}
-.icon-shield {
-  &:before {
-    content: $icon-shield; 
-  }
-}
-.icon-student-cap {
-  &:before {
-    content: $icon-student-cap; 
-  }
-}
-.icon-twitter {
-  &:before {
-    content: $icon-twitter; 
-  }
-}
-
