add button and margin-x-centre mixins

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import '../node_modules/normalize.css/normalize',
         'breakpoints',
-        'button',
+        './mixins/button',
+        './mixins/margin-x-centre',
         'shared-colours',
         './icons/font',
         './nav-bar/nav-bar',
