--- a/scss/services/_services.scss
+++ b/scss/services/_services.scss
@@ -4,18 +4,26 @@
 #services {
     margin: 2rem 1rem;
 
+    article {
+        padding: 0;
+        margin: 0;
+    }
+    
     a {
         text-decoration: none;
         color: $services-text-colour;
         text-align: center;
-    }
 
-    article {
+        display: block;
+        height: 19.5rem;
+
         padding: 1.5em;
         background-color: $services-card-background-colour;
         border: 1px solid $services-card-border-colour;
         border-radius: 3px;
         box-shadow: 0 0 30px $services-card-shadow-colour;
+
+        margin: 2rem auto;
     }
 
     h2 {
@@ -85,4 +93,36 @@
             padding-top: ($services-icon-background-size - $services-icon-size) * 0.5;
         }
     }
+
+    // 991px or smaller moves to one card per row for:
+    // bespoke, support, marketing. Others are 2 per row,
+    // until 767 or smaller when they're all one per row.
+
+    // past extra-small first 3 cards remain as they are but rest are put into a 2x2 grid
+    @media (min-width: map.get($breakpoints, 'extra-small')) {
+        width: 47rem;
+        @include margin-x-centre;
+
+        .other-services {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: stretch;
+            align-content: space-between;
+
+            // negative margin reverses effect of external margins from children
+            margin: 0 -1rem;
+
+            >* {
+                display: block;
+                
+                margin: 1rem 1rem;
+                flex-basis: 15rem;
+                flex-grow: 1;
+            }
+        }
+    }
+
+    //TODO: button should be put to bottom of container with flex
 }
