--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
         'breakpoints',
         './mixins/button',
         './mixins/margin-x-centre',
+        './mixins/wrapped-flex',
         'shared-colours',
         './icons/font',
         './nav-bar/nav-bar',
