--- a/scss/icons/_icons.scss
+++ b/scss/icons/_icons.scss
@@ -31,7 +31,7 @@
 }
 
 @each $icon-name, $unicode in $icon-unicode-by-name {
-    .#{$icon-name} {
+    .icon-#{$icon-name} {
         &::before {
             content: $unicode;
         }
