--- a/scss/icons/_variables.scss
+++ b/scss/icons/_variables.scss
@@ -2,26 +2,29 @@ $icomoon-font-family: "netmatters-icons" !default;
 $icomoon-font-path: "../font" !default;
 
 $icon-unicode-by-name: (
-    'icon-bars': '\e900',
-    'icon-code': '\e901',
-    'icon-facebook': '\e902',
-    'icon-grid': '\e903',
-    'icon-linked-in': '\e904',
-    'icon-monitor': '\e905',
-    'icon-phone': '\e906',
-    'icon-right-arrow': '\e907',
-    'icon-search': '\e908',
-    'icon-shield': '\e909',
-    'icon-student-cap': '\e90a',
-    'icon-twitter': '\e90b',
+    'hamburger': '\e90c',
+    'mouse': '\e90d',
+    'paper-plane': '\e90e',
+    'bars': '\e900',
+    'code': '\e901',
+    'facebook': '\e902',
+    'grid': '\e903',
+    'linked-in': '\e904',
+    'monitor': '\e905',
+    'phone': '\e906',
+    'right-arrow': '\e907',
+    'search': '\e908',
+    'shield': '\e909',
+    'student-cap': '\e90a',
+    'twitter': '\e90b',
 );
 
 $icon-name-by-service: (
-    'web-design': 'icon-code',
-    'it-support': 'icon-monitor',
-    'telecoms-services': 'icon-phone',
-    'bespoke-software': 'icon-grid',
-    'digital-marketing': 'icon-bars',
-    'cyber-security': 'icon-shield',
-    'developer-training': 'icon-student-cap',
+    'web-design': 'code',
+    'it-support': 'monitor',
+    'telecoms-services': 'phone',
+    'bespoke-software': 'grid',
+    'digital-marketing': 'bars',
+    'cyber-security': 'shield',
+    'developer-training': 'student-cap',
 );
