--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,8 @@
         './mixins/margin-x-centre',
         './mixins/wrapped-flex',
         'shared-colours',
-        './icons/font',
+        './icons/icons',
+        './header/header',
         './nav-bar/nav-bar',
         './hero-image/hero-image',
         './services/services',
