--- a/scss/icons/_variables.scss
+++ b/scss/icons/_variables.scss
@@ -1,30 +1,30 @@
-$icomoon-font-family: "netmatters-icons" !default;
-$icomoon-font-path: "../font" !default;
+$font-family: "netmatters-icons" !default;
+$font-path: "../font" !default;
 
 $icon-unicode-by-name: (
-    'hamburger': '\e90c',
-    'mouse': '\e90d',
-    'paper-plane': '\e90e',
-    'bars': '\e900',
-    'code': '\e901',
-    'facebook': '\e902',
-    'grid': '\e903',
-    'linked-in': '\e904',
-    'monitor': '\e905',
-    'phone': '\e906',
-    'right-arrow': '\e907',
-    'search': '\e908',
-    'shield': '\e909',
-    'student-cap': '\e90a',
-    'twitter': '\e90b',
+    "hamburger": "\e90c",
+    "mouse": "\e90d",
+    "paper-plane": "\e90e",
+    "bars": "\e900",
+    "code": "\e901",
+    "facebook": "\e902",
+    "grid": "\e903",
+    "linked-in": "\e904",
+    "monitor": "\e905",
+    "phone": "\e906",
+    "right-arrow": "\e907",
+    "search": "\e908",
+    "shield": "\e909",
+    "student-cap": "\e90a",
+    "twitter": "\e90b",
 );
 
 $icon-name-by-service: (
-    'web-design': 'code',
-    'it-support': 'monitor',
-    'telecoms-services': 'phone',
-    'bespoke-software': 'grid',
-    'digital-marketing': 'bars',
-    'cyber-security': 'shield',
-    'developer-training': 'student-cap',
+    "web-design": "code",
+    "it-support": "monitor",
+    "telecoms-services": "phone",
+    "bespoke-software": "grid",
+    "digital-marketing": "bars",
+    "cyber-security": "shield",
+    "developer-training": "student-cap",
 );
