--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -1,1 +1,7 @@
+@forward "breakpoints";
+@forward "button";
+@forward "hero-image";
+@forward "margin-x-centre";
 @forward "px-to-rem";
+@forward "rounded-corners";
+@forward "wrapped-flex";
